# BotCopier

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.ubuntu  README.md  StrategyTemplate.mq4  config.json  dvc.yaml  grpc_client.cpp  grpc_predict_client.cpp  logging_utils.py  mkdocs.yml  model.json  model.json.dvc  params.yaml  pyproject.toml  requirements.txt  shm_ring.h  symbol_graph.json  synthetic_prices.csv  synthetic_prices.csv.dvc  train_target_clone.py
.dvc/: config
automl/: controller.py
botcopier/: exceptions.py  metrics.py  onnx_utils.py  shap_utils.py
config/: settings.py
configs/: prioritized_c51.json  prioritized_qr_dqn.json
dashboard/: server.py
docs/: README.md  api.md  architecture.md  async_anomaly_client.py  cli_usage.md  coding_standards.md  contributing.md  dask_mode.md  data_flow.md  data_loading_tutorial.md  docker-compose.yml  drift_monitor.md  end_to_end_pipeline.md  eval_hooks.md  fallback-logging.md  feature_benchmark.md  feature_plugins.md  getting_started.md  grpc_pipeline.md  hardware-training.md  index.md  metrics_dashboard.json  model_explanations.md  model_registry.md  notebooks.md  observability.md  otel-collector.yaml  otel-exporter.yaml  profiling.md  prometheus-alerts.yaml  serve_model.md  testing.md  troubleshooting.md
experts/: Observer_TBot.mq4  StrategyTemplate.mq4  TickHistoryExporter.mq4  model_interface.mqh
grafana/: metrics_dashboard.json  prometheus.yml
meta/: __init__.py  meta_pretrain.py  reptile.py
metrics/: __init__.py  aggregator.py  registry.py  server.py
models/: registry.py
notebooks/: cli_walkthrough.ipynb  getting_started.ipynb  model_evaluation.ipynb
proto/: README.md  __init__.py  federated_buffer.proto  federated_buffer_pb2.py  federated_buffer_pb2_grpc.py  log_service.proto  log_service_pb2.py  log_service_pb2_grpc.py  metric_event.pb.cc  metric_event.pb.h  metric_event.proto  metric_event_pb2.py  metrics.capnp  metrics.pb.cc  metrics.pb.h  metrics.proto  metrics_pb2.py  observer.pb.cc  observer.pb.h  observer.proto  observer_pb2.py  predict.grpc.pb.cc  predict.grpc.pb.h  predict.pb.cc  predict.pb.h  predict.proto  predict_pb2.py  predict_pb2_grpc.py  trade.capnp  trade_event.pb.cc  trade_event.pb.h  trade_event.proto  trade_event_pb2.py
schemas/: VERSION_HISTORY.md  __init__.py  trades.py  (+7 more)
(+390 files in other folders)
